@@ -134,6 +134,7 @@ entity.ServerNode.property.recachePublishingMethod.label=Recache method
 entity.ServerNode.property.recacheUrl.label=Recache URL
 entity.ServerNode.property.useUpdateSecurity.label=Use IP-security on application actions
 entity.ServerNode.property.pageKey.label=Default page cache key
+entity.ServerNode.property.componentKey.label=Default component cache key
 entity.ServerNode.property.cmsConnection.label=CMS connection
 entity.ServerNode.property.cmsBaseUrl.label=CMS Base URL
 entity.ServerNode.property.cmsFullBaseUrl.label=CMS Full Base URL
